doc/assets/scss/_doc-main.scss
// Site SipaUI
// CSS par défaut spécifiques au projet
//

header {
    position: fixed;
    width: 100%;
    top: 0;
    background: radial-gradient(circle at 100% 100%, $couleur-secondaire-1, $couleur-secondaire-3);
    z-index: 1000;

    .identite {
        padding: $margin-small $margin-small $margin-small $margin-medium2;

        a {
            transition: text-shadow .3s ease;
            text-decoration: none;

            &:hover,
            &:focus,
            &:active {
                color: inherit;
                text-shadow: 0 0 2px $couleur-principale-1;
            }
        }
        svg,
        .titre,
        .version {
            vertical-align: middle;
        }
    }
    .titre {
        font-size: $font-size-tall;
        margin-left: $margin-resp-small;
        color: $couleur-principale-1;
    }
    .bandeau {
        position: absolute;
        top: 50%;
        right: 0;
        background: $couleur-tertiaire-2;
        padding: 5px;
        width: 170px;
        transform: translate(50px, -50%) rotate(45deg);
        box-shadow: 0 2px 7px 3px rgba(0, 0, 0, 0.3);
        color: $couleur-secondaire-2;
        text-align: center;
    }
}
nav {
    $bgColor-menu: $couleur-principale-8;
    $bgColor-sousMenu: $couleur-principale-6;
    box-shadow: 0 2px 3px  1px rgba(0,0,0, .5);

    ul {
        background: $bgColor-menu;
        padding: 5px 20px 0;
    }
    a {
        $couleur: $couleur-principale-1;
        display: inline-block;
        color: $couleur;
        opacity: .8;
        text-decoration: none;
        transition: opacity .3s ease;
        margin-right: $margin-resp-standard;
        border-bottom: 5px solid $bgColor-menu;

        &:hover,
        &.actif {
            color: $couleur;
            border-bottom-color: $couleur-principale-1;
            opacity: 1;
        }
    }
    .sous-menu {
        background: $bgColor-sousMenu;
        a {
            border-bottom-color: $bgColor-sousMenu;
        }
    }
}
main {
    > *:first-child {
        padding-top: 12rem;
    }
    .conteneur {
        padding-left: $margin-standard;
        padding-right: $margin-standard;
    }
}
.trop-large-responsif {
    overflow-x: scroll;
}


.version {
    background: rgba(0,0,0, .4);
    padding: 3px 13px;
    border-radius:  3px;
    font-size: 1.5rem;
    display: inline-block;
    color: $couleur-principale-1;
}

.presentation {
    font-size: $font-size-medium2;
    color: $couleur-principale-1;
    background: radial-gradient(circle at 35% 10%, $couleur-secondaire-1, $couleur-secondaire-3);
    padding-bottom: 10rem;

    .titre {
        text-align: center;
        margin-bottom: $margin-large;
        h1 {
            margin-bottom: $margin-medium2;
            font-size: $font-size-xxxtall;
            color: $couleur-principale-1;
        }
    }
    .baseline {
        font-size: $font-size-tall;
        text-align: center;
    }
    .intro {
        background: rgba(0,0,0, .2);
        padding: 1.4rem 2rem;
        border-radius:  10px;
    }
}

.table {
    display: table;
}
.row {
    display: table-row;
}
.cell {
    display: table-cell;
}
.bas {
    vertical-align: bottom;
}

.carte {
    width: 500px;
    margin-bottom: $margin-resp-small;
}
.integre {
    > ul > li {
        margin-bottom: $margin-resp-standard;
    }
    h2,
    h3 {
        margin-bottom: $margin-resp-small;
    }
}
.tableau-suivi {
    th,
    td {
        width: 45%;

        &:first-child {
            width: 10%;
        }
    }
    h3 {
        margin-bottom: $margin-resp-xsmall;
        font-size: $font-size-medium1;
        line-height: $line-height-medium;
    }
    .resolu {
        color: $couleur-principale-5;

        &::before,
        li::before {
            background: $couleur-principale-5 !important;
        }
    }
}

.accueil .illustration {
    width: 150px;
}

.titre-doc {
    color: #950030 !important;
    font-weight: $font-weight-thin;
}

.plan-versions {
    .version {
        margin: 0 $margin-medium1 $margin-small 0;
    }
    .fait {
        color: $couleur-principale-5;
    }
}

.documentation {
    color: #40a42b;
}
.catalogue {
    color: $couleur-secondaire-1;
}
.livrable {
    color: #000;
    font-weight: 700;
}
pre code {
    font-size: 12px;
    font-family: Courier;
    background: #eee;
    padding: 5px;
    line-height: 15px;
    display: block;
}

